# examples

is-even-wasm/: Cargo.toml  README.md  build.rs  demo.html  wpmd.toml
is-even-wasm/include/: is_even.h
is-even-wasm/python/: is_even_wasm.pyi
is-even-wasm/src/: ffi.rs  lib.rs  python_bindings.rs  wasm_bindings.rs
